--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="../images/my_company_logo.png"/>
+    <img src="https://i.imgur.com/H1qsYEl.png" alt="comedic crow gets wholesome support"/>
+    <img
+  src="https://i.imgur.com/H1qsYEl.png" alt="comedic crow gets wholesome support"
+  title="We're here to help you!"/>
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"/>
+/>
   </body>
 </html>
